# aws-video-cdn

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/: instructions.md
app/: main.py
app/api/: routes.py
app/api/endpoints/: videos.py
app/core/: aws.py  config.py
app/schemas/: video.py
infrastructure/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  update_env.py
tests/: conftest.py  test_aws.py  test_videos.py
